Fix spacing on optional fields (buttons/inputs)
* It was hard to tell which labels went with which inputs in the
optional fields. This was resolved by grouping the two closer together.
This meant spacing (via the margins) had to be pulled out and
consolidated.
* page.scss wrapped in #giphy-page selector to ensure these rules only
apply on that one page. The copy link page should probably have it's own
wrapping class.

--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -34,6 +34,5 @@ button {
 button,
 input,
 textarea {
-  margin: 10px 0 0;
   padding: 10px 16px;
 }
