--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -15,7 +15,6 @@ select {
 
 label {
   font-weight: 600;
-  margin-bottom: $small-spacing / 2;
   overflow-wrap: break-word;
 
   &.required::after {
