--- a/app/assets/stylesheets/pages/giphy.scss
+++ b/app/assets/stylesheets/pages/giphy.scss
@@ -8,9 +8,6 @@
     button {
       @include span-columns(4);
     }
-
-    .use {
-    }
   }
 
   .giphy-search {
